@@ -293,17 +293,17 @@ proc gdb_comm_load { dest prog args } {
 		set bssoff $expect_out(1,string)
 		exp_continue
 	    }
-	    -re "$gdb_prompt" { }
+	    -re $gdb_prompt { }
 	}
 	set dataoff [format 0x%x [expr {$dataoff + $textoff}]]
 	set bssoff [format 0x%x [expr {$bssoff + $textoff}]]
 	remote_send host "sect .data $dataoff\n"
 	remote_expect host 10 {
-	    -re "$gdb_prompt" { }
+	    -re $gdb_prompt { }
 	}
 	remote_send host "sect .bss $bssoff\n"
 	remote_expect host 10 {
-	    -re "$gdb_prompt" { }
+	    -re $gdb_prompt { }
 	}
     }
 
@@ -559,7 +559,7 @@ proc gdb_comm_reload { dest prog aargs } {
 	incr try_again
 	set result [eval remote_load \"$dest\" \"$prog\" $aargs]
 	set try_again 0
-	return "$result"
+	return $result
     } else {
 	set try_again 0
 	return [list "untested" ""]
