@@ -62,7 +62,7 @@ proc unix_load { dest prog args } {
     }
     verbose "loading to $dest" 2
     if {![isremote $dest]} {
-	if { "$inp" ne "" } {
+	if { $inp ne "" } {
 	    set command "$prog $parg < $inp"
 	} else {
 	    set command "$prog $parg"
@@ -73,12 +73,12 @@ proc unix_load { dest prog args } {
 	}
 
 	set orig_ld_library_path "[getenv LD_LIBRARY_PATH]"
-	setenv LD_LIBRARY_PATH "$ld_library_path:$orig_ld_library_path"
-	setenv SHLIB_PATH "$ld_library_path:$orig_ld_library_path"
+	setenv LD_LIBRARY_PATH $ld_library_path:$orig_ld_library_path
+	setenv SHLIB_PATH $ld_library_path:$orig_ld_library_path
 	verbose -log "Setting LD_LIBRARY_PATH to $ld_library_path:$orig_ld_library_path" 2
 	verbose -log "Execution timeout is: $test_timeout" 2
 
-	set id [remote_spawn $dest "$command" "readonly"]
+	set id [remote_spawn $dest $command "readonly"]
 	if { $id < 0 } {
 	    set output "remote_spawn failed"
 	    set status -1
@@ -119,7 +119,7 @@ proc unix_load { dest prog args } {
 		return [list "unresolved" ""]
 	    }
 	}
-	set status [remote_exec $dest "$remotefile" $parg $inp]
+	set status [remote_exec $dest $remotefile $parg $inp]
 	remote_file $dest delete $remotefile.o $remotefile
 	if { [lindex $status 0] < 0 } {
 	    verbose -log "Couldn't execute $prog, [lindex $status 1]" 3
@@ -134,7 +134,7 @@ proc unix_load { dest prog args } {
 
     verbose "Executed $prog, status $status" 2
     if {$output ne ""} {
-	verbose -- "$output" 2
+	verbose -- $output 2
     }
     if { $status == 0 } {
 	set result "pass"
